# flood_agent

./: .env.template  .gitignore  ARCHITECTURE.md  DEMO.md  EXPLANATION.md  README.md  pyproject.toml  run.py
agents/: __init__.py  agent.py  data_collection.py  flood_detection.py  geocoding.py  impact_assessment.py  prompts.py
frontend/: index.html
frontend/css/: chat.css  gauges.css  images.css  main.css
frontend/js/: app.js  chat.js  gauges.js  images.js  websocket.js
mcp_server/: config.py  nwps.py  prithvi.py  sentinel.py  server.py
server/: adk_wrapper.py  config.py  main.py  models.py  session_manager.py  websocket_manager.py
server/routers/: chat.py  outputs.py  websocket.py
